--- a/Lumini/index.html
+++ b/Lumini/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#0f172a" />
     <meta name="description" content="Lumina Chat - Современный мессенджер с ИИ-ассистентом" />
     <title>Lumina Chat | AI Messenger</title>
-    <!-- Tailwind CSS (для простоты оставляем CDN, но в идеале тоже переносим в package.json) -->
+    <!-- Tailwind CSS подключим через JS или оставим CDN, если не настроен PostCSS, но для надежности оставим пока CDN для стилей, но уберем скрипты -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -56,7 +56,7 @@
         animation: pulse-ring 3s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
       }
     </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
@@ -64,8 +64,8 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "vite": "https://aistudiocdn.com/vite@^7.2.4"
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
