--- a/Lumini/index.html
+++ b/Lumini/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#0f172a" />
-    <meta name="description" content="Lumina Chat - Современный мессенджер с ИИ-ассистентом" />
-    <title>Lumina Chat | AI Messenger</title>
-    <!-- Tailwind CSS подключим через JS или оставим CDN, если не настроен PostCSS, но для надежности оставим пока CDN для стилей, но уберем скрипты -->
+    <meta name="description" content="Lumini Chat - Современный мессенджер с ИИ-ассистентом" />
+    <title>Lumini Chat | AI Messenger</title>
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            colors: {
+              slate: {
+                850: '#1e293b', // Custom dark shade if needed
+              }
+            }
+          }
+        }
+      }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #0f172a; /* Slate 900 */
-        color: #f8fafc; /* Slate 50 */
         overscroll-behavior: none; /* Prevents bounce on Mac/iOS */
       }
       /* Custom Scrollbar */
@@ -24,10 +36,16 @@
         background: transparent;
       }
       ::-webkit-scrollbar-thumb {
-        background: #334155;
+        background: #cbd5e1; /* Slate 300 for light */
         border-radius: 3px;
       }
+      .dark ::-webkit-scrollbar-thumb {
+        background: #334155; /* Slate 700 for dark */
+      }
       ::-webkit-scrollbar-thumb:hover {
+        background: #94a3b8;
+      }
+      .dark ::-webkit-scrollbar-thumb:hover {
         background: #475569;
       }
 
@@ -71,7 +89,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body>
+  <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-50 transition-colors duration-200">
     <div id="root"></div>
     <!-- Vite Entry Point -->
     <script type="module" src="/index.tsx"></script>
